Email-texts sorted

--- a/app/views/custom/mails/passwordChangedNotice.scala.html
+++ b/app/views/custom/mails/passwordChangedNotice.scala.html
@@ -2,10 +2,9 @@
 @import securesocial.core.IdentityProvider
 
 <html>
-<body>
-<p>Hello @user.firstName,</p>
-
-<p>Your password was updated.  Please log in using your new password by clicking
-    <a href="@securesocial.core.providers.utils.RoutesHelper.login.absoluteURL(IdentityProvider.sslEnabled)(request)">here</a></p>
-</body>
+    <body>
+        <p>@Messages("mails.passwordChangedNotice.body.part1", user.firstName)</p>
+        @mailLink = { <a href="@securesocial.core.providers.utils.RoutesHelper.login.absoluteURL(IdentityProvider.sslEnabled)(request)">@Messages("mails.passwordChangedNotice.body.linkToLogin")</a> }
+        <p>@Html(Messages("mails.passwordChangedNotice.body.part2", mailLink))</p>
+    </body>
 </html>
