--- a/app/views/custom/mails/alreadyRegisteredEmail.scala.html
+++ b/app/views/custom/mails/alreadyRegisteredEmail.scala.html
@@ -3,9 +3,8 @@
 
 <html>
     <body>
-        <p>Hello @user.firstName,</p>
-
-        <p>You tried to sign up but you already have an account with us.  If you don't remember your password please go
-            <a href="@securesocial.core.providers.utils.RoutesHelper.startResetPassword().absoluteURL(IdentityProvider.sslEnabled)(request)">here</a> to reset it.</p>
+        <p>@Messages("mails.sendAlreadyRegisteredEmail.body.part1", user.firstName)</p>
+        @mailLink = { <a href="@securesocial.core.providers.utils.RoutesHelper.startResetPassword().absoluteURL(IdentityProvider.sslEnabled)(request)">@Messages("mails.sendAlreadyRegisteredEmail.body.linkToResetPassword")</a> }
+        <p>@Html(Messages("mails.sendAlreadyRegisteredEmail.body.part2", mailLink))</p>
     </body>
 </html>
