--- a/app/views/custom/mails/passwordResetEmail.scala.html
+++ b/app/views/custom/mails/passwordResetEmail.scala.html
@@ -1,12 +1,9 @@
 @(user: securesocial.core.Identity, token: String)(implicit request: play.api.mvc.RequestHeader)
 @import securesocial.core.IdentityProvider
 <html>
-<body>
-<p>Hello @user.firstName,</p>
-
-<p>Please follow this
-    <a href="@securesocial.core.providers.utils.RoutesHelper.resetPassword(token).absoluteURL(IdentityProvider.sslEnabled)(request)">
-    link</a> to reset your password.
-</p>
-</body>
+    <body>
+        <p>@Messages("mails.passwordResetEmail.body.part1", user.firstName)</p>
+        @mailLink = { <a href="@securesocial.core.providers.utils.RoutesHelper.resetPassword(token).absoluteURL(IdentityProvider.sslEnabled)(request)">@Messages("mails.passwordResetEmail.body.linkToResetPassword")</a> }
+        <p>@Html(Messages("mails.passwordResetEmail.body.part2", mailLink))</p>
+    </body>
 </html>
