--- a/app/views/custom/mails/unknownEmailNotice.scala.html
+++ b/app/views/custom/mails/unknownEmailNotice.scala.html
@@ -1,15 +1,9 @@
 @(implicit request: play.api.mvc.RequestHeader)
 <html>
 <body>
-<p>Hello,</p>
-
-<p>We received a request to reset a password in our system.  The attempt has failed because we do not have
-    a registered account with this email address. It could be that you logged in using an external account such as Twitter
-    or Facebook.</p>
-
-<p>
-    If you never created an account with us ignore this email, otherwise if you think you have an account with us contact
-    tech support for further assistance.
-</p>
+    <p>@Messages("mails.unknownEmail.body.part1")</p>
+    <p>@Messages("mails.unknownEmail.body.part2")</p>
+    @mailLink = { <a href="mailto:@Messages("mails.unknownEmail.body.maillink")">@Messages("mails.unknownEmail.body.mailtitle")</a> }
+    <p>@Html(Messages("mails.unknownEmail.body.part3", mailLink))</p>
 </body>
 </html>
