--- a/app/views/campaign/index.scala.html
+++ b/app/views/campaign/index.scala.html
@@ -1,5 +1,6 @@
+@()(implicit request: RequestHeader)
 
-@main(Messages("campaign.title"), headerVisible = false, footerVisible = false) {
+@main(Messages("campaign.title"), headerVisible = false, footerVisible = false){
 
     <div class="container-fluid newsletter">
         <div class="row-fluid">
