--- a/app/views/custom/Registration/signUp.scala.html
+++ b/app/views/custom/Registration/signUp.scala.html
@@ -28,7 +28,8 @@
                                 @helper.inputText(
                                     signUpForm("userName"),
                                     '_label -> Messages("securesocial.signup.username"),
-                                    'class -> "input-xlarge"
+                                    'class -> "input-xlarge",
+                                    'autofocus -> "autofocus"
                                 )
                             }
 
