--- a/app/views/host/index.scala.html
+++ b/app/views/host/index.scala.html
@@ -1,4 +1,4 @@
-@(menuItems: Seq[(String, String, String, String)], tab1: String, tab2: String, tab3: String, tab4: String)
+@(menuItems: Seq[(String, String, String, String)], tab1: String, tab2: String, tab3: String, tab4: String)(implicit request: RequestHeader)
 
 @main(Messages("host.title")) {
 
