--- a/app/views/profile/editprofile.scala.html
+++ b/app/views/profile/editprofile.scala.html
@@ -1,4 +1,4 @@
-@(userProfileForm: Form[models.formdata.UserProfile])
+@(userProfileForm: Form[models.formdata.UserProfile])(implicit request: RequestHeader)
 @import helper._
 @import models.formdata.UserProfile
 
