--- a/app/views/profile/listofProfiles.scala.html
+++ b/app/views/profile/listofProfiles.scala.html
@@ -1,4 +1,4 @@
-@(userProfileList: List[models.UserProfileData])
+@(userProfileList: List[models.UserProfileData])(implicit request: RequestHeader)
 
 
 <h1>Show all profiles</h1>
