--- a/app/views/profile/updateUserProfile.scala.html
+++ b/app/views/profile/updateUserProfile.scala.html
@@ -1,4 +1,4 @@
-@(UserProfileForm: Form[models.formdata.UserProfile])
+@(UserProfileForm: Form[models.formdata.UserProfile])(implicit request: RequestHeader)
 
 <h1>Ändra användarprofil</h1>
 @import models.formdata.UserProfile
