--- a/app/views/contentcolumns/twocolumn.scala.html
+++ b/app/views/contentcolumns/twocolumn.scala.html
@@ -1,4 +1,4 @@
-@(urlTitle: String, menuHeader: String = "", menuList: List[models.content.MenuItem] = Nil, column1Header: String = "", column1Body: String = "", column2Header: String = "", column2Body: String = "")
+@(urlTitle: String, menuHeader: String = "", menuList: List[models.content.MenuItem] = Nil, column1Header: String = "", column1Body: String = "", column2Header: String = "", column2Body: String = "")(implicit request: RequestHeader)
 
 @main(urlTitle) {
 
