--- a/app/views/custom/Registration/resetPasswordPage.scala.html
+++ b/app/views/custom/Registration/resetPasswordPage.scala.html
@@ -27,7 +27,8 @@
                             @helper.inputPassword(
                             resetForm("password.password1"),
                             '_label -> Messages("securesocial.signup.password1"),
-                            'class -> "input-xlarge"
+                            'class -> "input-xlarge",
+                            'autofocus -> "autofocus"
                             )
 
                             @helper.inputPassword(
