--- a/app/views/custom/Registration/startResetPassword.scala.html
+++ b/app/views/custom/Registration/startResetPassword.scala.html
@@ -26,7 +26,8 @@
                             @helper.inputText(
                             startForm("email"),
                             '_label -> Messages("securesocial.signup.email1"),
-                            'class -> "input-xlarge"
+                            'class -> "input-xlarge",
+                            'autofocus -> "autofocus"
                             )
 
                             <div class="form-actions">
