--- a/app/views/custom/notAuthorized.scala.html
+++ b/app/views/custom/notAuthorized.scala.html
@@ -1,3 +1,4 @@
+@()(implicit request: RequestHeader)
 @main(Messages("securesocial.notAuthorized.title")) {
     <div class="page-header">
         <h1>@Messages("securesocial.notAuthorized.title")</h1>
