--- a/app/views/contentcolumns/twocolumn.scala.html
+++ b/app/views/contentcolumns/twocolumn.scala.html
@@ -2,8 +2,8 @@
 
 @main(urlTitle) {
 
-    <div class="container-fluid maincontent-container">
-        <div class="row-fluid">
+    <div class="container maincontent-container">
+        <div class="row">
             <div class="col-xs-12 col-md-8 col-md-offset-1 col-xs-offset-0">
                 <div class="row">
                     <div class="col-xs-12 @if(menuList.isEmpty){col-md-6}else{col-md-4}">
