--- a/app/views/custom/Registration/resetPasswordPage.scala.html
+++ b/app/views/custom/Registration/resetPasswordPage.scala.html
@@ -4,8 +4,8 @@
 @implicitFieldConstructor = @{ FieldConstructor(securesocial.views.html.inputFieldConstructor.f) }
 
 @main(Messages("securesocial.password.title")){
-    <div class="container-fluid">
-        <div class="row-fluid">
+    <div class="container">
+        <div class="row">
             <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
 
                 <div class="page-header">
