--- a/app/views/custom/Registration/signUp.scala.html
+++ b/app/views/custom/Registration/signUp.scala.html
@@ -5,8 +5,8 @@
 @implicitFieldConstructor = @{ FieldConstructor(securesocial.views.html.inputFieldConstructor.f) }
 
 @main(Messages("securesocial.signup.title")){
-    <div class="container-fluid">
-        <div class="row-fluid">
+    <div class="container">
+        <div class="row">
             <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
                 <div class="page-header">
                     <h1>@Messages("securesocial.signup.title")</h1>
