--- a/app/views/custom/login.scala.html
+++ b/app/views/custom/login.scala.html
@@ -6,8 +6,8 @@
 @import securesocial.core.providers.UsernamePasswordProvider.UsernamePassword
 
 @main(Messages("securesocial.login.title")){
-    <div class="container-fluid">
-        <div class="row-fluid">
+    <div class="container">
+        <div class="row">
             <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
 
                 <div class="page-header">
