--- a/app/views/host/index.scala.html
+++ b/app/views/host/index.scala.html
@@ -2,8 +2,8 @@
 
 @main(Messages("host.title")) {
 
-    <div class="container-fluid host-container">
-        <div class="row-fluid">
+    <div class="container host-container">
+        <div class="row">
             <div class="col-xs-12 col-md-8 col-md-offset-1 col-xs-offset-0">
                 <div class="row">
                     <div class="col-xs-12 col-md-12 big-margin-top">
