--- a/app/views/recipe/recipe.scala.html
+++ b/app/views/recipe/recipe.scala.html
@@ -4,7 +4,7 @@
 
     <div class="container host-container">
         <div class="row">
-            <div class="col-xs-12 col-md-8 col-md-offset-1 col-xs-offset-0">
+            <div class="col-xs-12 col-md-9">
                 <div class="row">
                     <div class="col-xs-12 col-md-12 big-margin-top">
                         <div class="host-header">
