--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -1,5 +1,8 @@
-@(startPageBoxes: List[models.viewmodels.StartPageBox] = Nil)(implicit request: RequestHeader)
-@*(searchForm: Form[models.viewmodels.SearchStartPageForm])*@
+@(searchForm: Form[models.viewmodels.SearchStartPageForm],
+        optionsFoodAreas: Option[Seq[(String,String)]],
+        optionsLocationAreas: Option[Seq[(String,String)]] = None,
+        startPageBoxes: Option[List[models.viewmodels.StartPageBox]])(implicit request: RequestHeader)
+@import helper.twitterBootstrap._
 
 @main(Messages("startpage.title")) {
 
@@ -63,128 +66,47 @@
     *@
 
     <div class="container maincontent-container">
-        <div class="row big-margin-top">
-            <div class="col-xs-12 col-md-8 col-md-offset-1 col-xs-offset-0">
+        <div class="row margin-top">
+            <div class="col-xs-12 col-md-9">
                 <div class="row">
                     <!-- Filtering push -->
-                    <div class="col-xs-12">
+                    <div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 form-startpage-filter animated fadeInDownBig">
                     @* Search filter form *@
-                        <form class="form-horizontal">
-                            <select>
-                                <option>Välj län</option>
-                                <option>Stockholm</option>
-                                <option>Göteborg</option>
-                                <option>Malmö</option>
-                                <option>Malmö</option>
-                                <option>Malmö</option>
-                            </select>
+                        @*<form class="form-horizontal">*@
+                            @*<select>*@
+                                @*<option>Välj län</option>*@
+                                @*<option>Stockholm</option>*@
+                                @*<option>Göteborg</option>*@
+                                @*<option>Malmö</option>*@
+                                @*<option>Malmö</option>*@
+                                @*<option>Malmö</option>*@
+                            @*</select>*@
 
-                            <select>
-                                <option>Välj typ av mat</option>
-                                <option>Asiatiskt</option>
-                                <option>Franskt</option>
-                                <option>Amerikanskt</option>
-                            </select>
-                                <button class="btn btn-primary" type="submit">@Messages("startpage.filterform.submit")</button>
-                        </form>
+                            @*<select>*@
+                                @*<option>Välj typ av mat</option>*@
+                                @*<option>Asiatiskt</option>*@
+                                @*<option>Franskt</option>*@
+                                @*<option>Amerikanskt</option>*@
+                            @*</select>*@
+                                @*<button class="btn btn-primary" type="submit">@Messages("startpage.filterform.submit")</button>*@
+                        @*</form>*@
 
-                     @*
                     @helper.form(action=routes.StartPageController.filterProfiles(), 'class -> "form-horizontal"){
-                        <fieldset>
-                            @helper.inputText(searchForm("freeText"), '_label -> Messages("startpage.filterform.freetext"))
-                            @helper.inputText(searchForm("area"), '_label -> Messages("startpage.filterform.area"))
-                            @helper.inputText(searchForm("foodArea"), '_label -> Messages("startpage.filterform.foodarea"))
-                        </fieldset>
-                        <div class="form-actions">
-                            <button class="btn btn-primary" type="submit">@Messages("startpage.filterform.submit")</button>
+                        <div class="form-group">
+                            @* @helper.inputText(searchForm("freeText"), '_label -> Messages("startpage.filterform.freetext")) *@
+                            @if(!optionsFoodAreas.isEmpty){ <div class="col-xs-4"> @helper.select(searchForm("foodArea"), optionsFoodAreas.get, '_label -> Messages("startpage.filterform.foodarea"), 'class -> "form-control") </div>}
+                            @if(!optionsLocationAreas.isEmpty){ <div class="col-xs-4"> @helper.select(searchForm("area"), optionsLocationAreas.get, '_label -> Messages("startpage.filterform.area"), 'class -> "form-control") </div> }
+                            <div class="col-xs-4 form-actions"><button class="btn btn-primary" type="submit">@Messages("startpage.filterform.submit")</button></div>
                         </div>
-                    }
-                    *@
+                        }
                     </div>
                 </div>
-                <div class="row big-margin-top">
-                    @*<div class="col-xs-12">*@
-                        @*<div class="row center-block">*@
-                            @startpage.startpageBox(startPageBoxes)
-@*
-
-                            <div class="col-md-4 col-sm-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box2.png")')">
-                                <div class="body">
-                                    @shared.hostImageCircle()
-                                    <a href="#">
-                                        <h2>Host name</h2>
-                                        <hr>
-                                        <p class="location">Location</p>
-                                        @shared.grade(inputId = "host-grade", initialValue = 5, disabled = true, size = "xxs")
-                                     </a>
-                                    <div class="host-level-icon level-guest02" data-toggle="tooltip" data-placement="right" title="@Messages("level.guest.description")"><span>@Messages("level.guest.header")</span></div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 col-sm-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box3.png")')">
-                                <div class="body">
-                                    @shared.hostImageCircle()
-                                    <a href="#">
-                                        <h2>Host name</h2>
-                                        <hr>
-                                        <p class="location">Location</p>
-                                        @shared.grade(inputId = "host-grade", initialValue = 6, disabled = true, size = "xxs")
-                                    </a>
-                                    <div class="host-level-icon level-guest03" data-toggle="tooltip" data-placement="right" title="@Messages("level.guest.description")"><span>@Messages("level.guest.header")</span></div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 col-sm-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
-                                <div class="body">
-                                    @shared.hostImageCircle()
-                                    <a href="#">
-                                        <h2>Host name</h2>
-                                        <hr>
-                                        <p class="location">Location</p>
-                                        @shared.grade(inputId = "host-grade", initialValue = 10, disabled = true, size = "xxs")
-                                    </a>
-                                    <div class="host-level-icon level-host01" data-toggle="tooltip" data-placement="right" title="@Messages("level.host.description")"><span>@Messages("level.host.header")</span></div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-4 col-sm-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
-                                <div class="body">
-                                    @shared.hostImageCircle()
-                                    <a href="#">
-                                        <h2>Host name</h2>
-                                        <hr>
-                                        <p class="location">Location</p>
-                                        @shared.grade(inputId = "host-grade", initialValue = 10, disabled = true, size = "xxs")
-                                    </a>
-                                    <div class="host-level-icon level-host01" data-toggle="tooltip" data-placement="right" title="@Messages("level.host.description")"><span>@Messages("level.host.header")</span></div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 col-sm-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
-                                <div class="body">
-                                    @shared.hostImageCircle()
-                                    <a href="#">
-                                        <h2>Host name</h2>
-                                        <hr>
-                                        <p class="location">Location</p>
-                                        @shared.grade(inputId = "host-grade", initialValue = 10, disabled = true, size = "xxs")
-                                    </a>
-                                    <div class="host-level-icon level-host01" data-toggle="tooltip" data-placement="right" title="@Messages("level.host.description")"><span>@Messages("level.host.header")</span></div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 col-sm-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
-                                <div class="body">
-                                    @shared.hostImageCircle()
-                                    <a href="#">
-                                        <h2>Host name</h2>
-                                        <hr>
-                                        <p class="location">Location</p>
-                                        @shared.grade(inputId = "host-grade", initialValue = 10, disabled = true, size = "xxs")
-                                    </a>
-                                    <div class="host-level-icon level-host01" data-toggle="tooltip" data-placement="right" title="@Messages("level.host.description")"><span>@Messages("level.host.header")</span></div>
-                                </div>
-                            </div>
-*@
-
-                        @*</div>*@
-                    @*</div>*@
+                <div class="row margin-top">
+                    @if(!startPageBoxes.isEmpty){
+                        @for( a <- 1 to 10){
+                            @startpage.startpageBox(startPageBoxes.get)
+                        }
+                    }
                 </div>
 
                 <!-- CTA -->
