--- a/app/views/edit/index.scala.html
+++ b/app/views/edit/index.scala.html
@@ -1,6 +1,6 @@
 @()
 
-@mainedit(Messages("edit.content.title")){
+@mainedit(Messages("edit.title")){
 
     <div class="row">
         <div class="col-xs-12">
