TagWord - Edit mode

--- a/app/views/mainedit.scala.html
+++ b/app/views/mainedit.scala.html
@@ -21,6 +21,7 @@
                         <li><a href="@routes.ContentController.indexContentPages()">@Messages("edit.menu.pages")&nbsp;<span class="glyphicon glyphicon-file"></span></a></li>
                         <li><a href="@routes.RecipeController.indexRecipe()">@Messages("edit.menu.recipe")&nbsp;<span class="glyphicon glyphicon-leaf"></span></a></li>
                         <li><a href="@routes.CountyController.indexCounty()">@Messages("edit.menu.county")&nbsp;<span class="glyphicon glyphicon-road"></span></a></li>
+                        <li><a href="@routes.TagWordController.index()">@Messages("edit.menu.tagword")&nbsp;<span class="glyphicon glyphicon-bookmark"></span></a></li>
                         <li><a href="#">@Messages("edit.menu.users")&nbsp;<span class="glyphicon glyphicon-user"></span></a></li>
                         <li><a href="@routes.FileController.index()">@Messages("edit.menu.files")&nbsp;<span class="glyphicon glyphicon-picture"></span></a></li>
                     </ul>
