UserProfile page update first step

--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -16,14 +16,11 @@ Profil
 
  <br>
 
-    Beskrivning:
-   <textarea rows="10" cols="100" name="aboutme" id="aboutme">
-
-   </textarea>
 
 
-    @helper.inputText(EnvDataForm("description"),
-        'id -> "description",
+
+    @helper.textarea(EnvDataForm("aboutme"),
+        'id -> "aboutme",
         '_showErrors -> true,
         '_label -> "Beskrivning",
         '_help -> "Bskriv dig själv"
