UserProfile page update first step

--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -20,6 +20,7 @@ Profil
 
 
     @helper.textarea(EnvDataForm("aboutme"),
+        args = 'rows -> 10, 'cols -> 100,
         'id -> "aboutme",
         '_showErrors -> true,
         '_label -> "Beskrivning",
