--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -33,8 +33,8 @@ Profil
 @helper.inputText(EnvDataForm("name"),
 'id -> "name",
 '_showErrors -> true,
-'_label -> "Name",
-'_help -> "e-post"
+'_label -> "Profilnamn",
+'_help -> "Namn på profilen"
 )
 
 @helper.inputText(EnvDataForm("emails[0]"),
