Refactored UserCredentialService and UserProfileService Added UserRole Added editmode for UserRole

--- a/app/views/edit/content/add.scala.html
+++ b/app/views/edit/content/add.scala.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-xs-12">
             <h1 class="page-header">@Messages("edit.content.add.header")</h1>
-            @helper.form(action=routes.ContentController.addContentPageSubmit(), 'class -> "form-horizontal"){
+            @helper.form(action=routes.ContentController.addSubmit(), 'class -> "form-horizontal"){
                 <fieldset>
                     @helper.inputText(contentForm("pagename"), '_label -> Messages("edit.content.add.name"), '_help -> Messages("edit.content.add.name.validation"))
                     @helper.inputText(contentForm("pageroute"), '_label -> Messages("edit.content.add.route"), '_help -> Messages("edit.content.add.route.validation"))
@@ -16,7 +16,7 @@
                 </fieldset>
                 <div class="form-actions">
                     <button class="btn btn-primary" type="submit">@Messages("edit.add.save")</button>
-                    <a class="btn" href="@routes.ContentController.indexContentPages()">@Messages("edit.add.abort")</a>
+                    <a class="btn" href="@routes.ContentController.index()">@Messages("edit.add.abort")</a>
                 </div>
             }
 
