--- a/app/views/custom/notAuthorized.scala.html
+++ b/app/views/custom/notAuthorized.scala.html
@@ -1,10 +1,17 @@
 @()(implicit request: RequestHeader)
 @main(Messages("securesocial.notAuthorized.title")) {
-    <div class="page-header">
-        <h1>@Messages("securesocial.notAuthorized.title")</h1>
-    </div>
 
-    <div class="alert alert-error animated fadeIn">
-        @Messages("securesocial.notAuthorized.message")
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
+                <div class="page-header">
+                    <h1>@Messages("securesocial.notAuthorized.title")</h1>
+                </div>
+
+                <div class="alert alert-error animated fadeIn">
+                    @Messages("securesocial.notAuthorized.message")
+                </div>
+            </div>
+        </div>
     </div>
 }
