--- a/app/views/edit/county/list.scala.html
+++ b/app/views/edit/county/list.scala.html
@@ -5,13 +5,14 @@
     <div class="row">
         <div class="col-xs-12">
         <h1 class="page-header">@Messages("edit.county.list.header")</h1>
-        <p><a href="@routes.CountyController.addCounty()" class="btn-primary">@Messages("edit.actions.add")</a></p>
+        <p><a href="@routes.CountyController.add()" class="btn-primary">@Messages("edit.actions.add")</a></p>
 
         <table class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
-                    <th>@Messages("edit.recipe.list.name")</th>
-                    <th>@Messages("edit.recipe.list.action")</th>
+                    <th>@Messages("edit.county.list.order")</th>
+                    <th>@Messages("edit.county.list.name")</th>
+                    <th>@Messages("edit.county.list.action")</th>
                 </tr>
             </thead>
 
@@ -19,7 +20,8 @@
                 @if(countyList.isDefined){
                     @for(item: models.location.County <- countyList.get) {
                         <tr>
-                            <td>@item.countyName</td>
+                            <td>@item.order</td>
+                            <td>@item.name</td>
                             <td>
                                 <ul class="nav nav-pills">
                                     <li><a href="@routes.CountyController.edit(item.objectId)"><span class="glyphicon glyphicon-edit"></span> &nbsp; @Messages("edit.actions.edit")</a></li>
