--- a/app/views/edit/recipe/list.scala.html
+++ b/app/views/edit/recipe/list.scala.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-xs-12">
         <h1 class="page-header">@Messages("edit.recipe.list.header")</h1>
-        <p><a href="@routes.RecipeController.addRecipe()" class="btn-primary">@Messages("edit.actions.add")</a></p>
+        <p><a href="@routes.RecipeController.add()" class="btn-primary">@Messages("edit.actions.add")</a></p>
 
         <table class="table table-striped table-hover table-bordered">
             <thead>
