--- a/app/views/edit/content/add.scala.html
+++ b/app/views/edit/content/add.scala.html
@@ -1,4 +1,4 @@
-@(contentForm: Form[models.viewmodels.AddContentForm])(implicit flash: Flash)
+@(contentForm: Form[models.viewmodels.AddContentForm], optionPages: Option[Seq[(String,String)]])(implicit flash: Flash)
 @import helper.twitterBootstrap._
 
 @mainedit(Messages("edit.title")){
@@ -9,10 +9,12 @@
             @helper.form(action=routes.ContentController.addSubmit(), 'class -> "form-horizontal"){
                 <fieldset>
                     @helper.inputText(contentForm("pagename"), '_label -> Messages("edit.content.add.name"), '_help -> Messages("edit.content.add.name.validation"))
+                    @if(optionPages.nonEmpty){ @helper.select(contentForm("pageparentid"), optionPages.get, '_label -> Messages("edit.content.add.parent")) }
                     @helper.inputText(contentForm("pageroute"), '_label -> Messages("edit.content.add.route"), '_help -> Messages("edit.content.add.route.validation"))
                     @helper.inputText(contentForm("pagetitle"), '_label -> Messages("edit.content.add.title"))
                     @helper.textarea(contentForm("pagepreamble"), '_label -> Messages("edit.content.add.preamble"), 'class -> "tinymce")
                     @helper.textarea(contentForm("pagebody"), '_label -> Messages("edit.content.add.body"), 'class -> "tinymce")
+                    @helper.checkbox(contentForm("pagevisible"), '_label -> Messages("edit.content.add.visibility"), '_help -> "")
                 </fieldset>
                 <div class="form-actions">
                     <button class="btn btn-primary" type="submit">@Messages("edit.add.save")</button>
